# streamarchiver

./: LICENSE  README.md  TODO.md  pyproject.toml
conf/: streamarchiver.yaml
src/: configuration.py  streamarchiver.py
